# FIND

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
doom/: README.md  index.html
examples/: gen_icon.rs
src/: app.rs  content.rs  doctext.rs  index.rs  lib.rs  main.rs  preview.rs  query.rs  search.rs  settings.rs  tray.rs  util.rs  watcher.rs
