[package]
name = "find"
version = "0.1.0"
edition = "2021"
description = "FIND — instant file search for your PC (an Everything-style search tool)"
license = "MIT"

[lib]
name = "find_core"
path = "src/lib.rs"

[[bin]]
name = "find"
path = "src/main.rs"

[dependencies]
eframe = "0.32"
egui_extras = { version = "0.32", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico", "tiff"] }
jwalk = "0.8"
rayon = "1.10"
nucleo-matcher = "0.3"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
directories = "6"
open = "5"
grep-searcher = "0.1"
grep-regex = "0.1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
strip = true
opt-level = 3

[build-dependencies]
winresource = "0.1.31"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.24.1"
